<resources>
    <string name="app_name">Ecommerce</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tnc">Dengan masuk disini, kamu menyetujui <font color="#6750A4">Syarat &amp; Ketentuan </font>serta <font color="#6750A4">Kebijakan Privasi TokoPhincon</font>.</string>
    <string name="cart_delete">Hapus</string>
    <string name="cart_cart">Keranjang</string>
    <string name="cart_buy">Beli</string>
    <string name="cart_selectall">Pilih Semua</string>
    <string name="cart_totalsum">Total Bayar</string>
    <string name="chekout_title">Checkout</string>
    <string name="checkout_products">Barang yang dibeli</string>
    <string name="checkout_payment">Pembayaran</string>
    <string name="checkout_choosepayment">Pilih Pembayaran</string>
    <string name="checkout_total">Total Bayar</string>
    <string name="checkout_pay">Bayar</string>
    <string name="filter_filter">Filter</string>
    <string name="filter_sort">Urutkan</string>
    <string name="filter_sale">Penjualan</string>
    <string name="filter_lowest">Harga Terendah</string>
    <string name="filter_highest">Harga Tertinggi</string>
    <string name="filter_price">Harga</string>
    <string name="filter_lowesthint">Terendah</string>
    <string name="filter_highesthint">Tertinggi</string>
    <string name="filter_show">Tampilkan Produk</string>
    <string name="home_logout">Logout</string>
    <string name="login_login">Masuk</string>
    <string name="login_email">Email</string>
    <string name="login_emailexample">Contoh: test@gmail.com</string>
    <string name="login_password">Password</string>
    <string name="login_enter">Masuk</string>
    <string name="login_or">atau daftar dengan</string>
    <string name="login_register">Daftar</string>
    <string name="bottomnav_home">Home</string>
    <string name="bottomnav_store">Store</string>
    <string name="bottomnav_wishlist">Wishlist</string>
    <string name="bottomnav_transaction">Transaction</string>
    <string name="onboarding_skip">Lewati</string>
    <string name="onboarding_register">Gabung Sekarang</string>
    <string name="onboarding_next">Selanjutnya</string>
    <string name="payment_choose">Pilih Pembayaran</string>
    <string name="product_detail">Detail Produk</string>
    <string name="product_variant">Pilihan varian</string>
    <string name="product_description">Deskripsi Produk</string>
    <string name="product_review">Ulasan pembeli</string>
    <string name="product_seeall">Lihat Semua</string>
    <string name="product_addcart">+ Keranjang</string>
    <string name="product_buynow">Beli Langsung</string>
    <string name="profile_profile">Profil</string>
    <string name="profile_name">Nama</string>
    <string name="profile_confirm">Selesai</string>
    <string name="register_register">Daftar</string>
    <string name="register_email">Email</string>
    <string name="register_emailexample">Contoh: test@gmail.com</string>
    <string name="register_password">Password</string>
    <string name="register_passwordhelper">Minimal 8 karakter</string>
    <string name="register_register2">Daftar</string>
    <string name="register_or">atau masuk dengan</string>
    <string name="review_review">Ulasan Pembeli</string>
    <string name="status_success">Pembayaran Berhasil</string>
    <string name="status_review">Beri Ulasan</string>
    <string name="status_detail">Detail Transaksi</string>
    <string name="status_id">ID Transaksi</string>
    <string name="status_status">Status</string>
    <string name="status_date">Tanggal</string>
    <string name="status_time">Waktu</string>
    <string name="status_method">Metode Pembayaran</string>
    <string name="status_total">Total Pembayaran</string>
    <string name="status_successcontent">Berhasil</string>
    <string name="status_done">Selesai</string>
    <string name="store_search">Search</string>
    <string name="store_filter">Filter</string>
    <string name="search_search">Search</string>
    <string name="transaction_item_shopping">Belanja</string>
    <string name="transaction_item_date">Date</string>
    <string name="transaction_item_done">Selesai</string>
    <string name="transaction_item_total">Total Belanja</string>
    <string name="transaction_item_review">Ulas</string>
    <string name="wishlist_addcart">+ Keranjang</string>
    <string name="filter_review">Ulasan</string>
    <string name="notification_title">Notification</string>
    <string name="stock">stok</string>
    <string name="empty">Empty</string>
    <string name="data_unavailable">Your requested data is unavailable</string>
    <string name="internal_error">Internal Server Error</string>
    <string name="connection_error">Your connection is unavailable</string>
    <string name="sold">Sold</string>
    <string name="item">item</string>
    <string name="remaining">remaining</string>
</resources>